# DATA-403-Project-3

./: .gitignore  Prediction Approach Summary.md  ViT.py  efficientnet_b0.ipynb  file_loader.ipynb  hand-label.xlsx  hand-labels.ipynb  holdout_predictions.csv  main.py  model.ipynb  pyproject.toml
__marimo__/: ViT.html
__marimo__/session/: ViT.py.json
predictions/google_vit-base-patch16-224/: holdout2_predictions.csv  holdout_predictions.csv  metrics.json
predictions/microsoft_swin-base-patch4-window7-224/: holdout_predictions.csv  metrics.json
