[project]
name = "data-403-project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "hf-xet>=1.2.0",
    "ipython>=8.37.0",
    "marimo>=0.18.0",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.1",
    "ty>=0.0.1a27",
]

[project.optional-dependencies]
cpu = ["torch>=2.7.0", "torchvision>=0.24.0"]
cu128 = ["torch>=2.7.0", "torchvision>=0.24.0"]
xpu = ["torch>=2.7.0", "torchvision>=0.24.0", "pytorch-triton-xpu==3.5.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }, { extra = "xpu" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [{ index = "pytorch-xpu", extra = "xpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
